<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Ledstrip_IOvars" Id="{92de1e4a-0eea-46a1-acc2-3ca4f25bf362}">
    <Declaration><![CDATA[TYPE ST_Ledstrip_IOvars :
STRUCT
	r_Soc						: REAL;
	b_Error						: BOOL;
	b_warning					: BOOL;
	b_attention					: BOOL;
	b_normal					: BOOL;
	r_DCCurrent					: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>